--- a/lesson-6/webpack/index.html
+++ b/lesson-6/webpack/index.html
@@ -1,7 +1,7 @@
 <html>
 
   <body>
-    <span id="name"></span>
+    <span id="name">Hiiii</span>
     <img id=logo />
     <script src="dist/bundle.js"></script>
   </body>
